<resources>
    <string name="app_name">MimicryProject</string>

    <!--General Application-->
    <string name="impersonator">Impersonator</string>
    <string name="hello_world">Hey World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_impersonator_view">ImpersonatorViewActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_impersonator_selection">ImpersonatorSelectionActivity</string>

    <!--Impersonator Creation Activity-->
    <string name="title_activity_impersonator_creation">ImpersonatorCreationActivity</string>
    <string name="impersonator_name">Impersonator Name</string>
    <string name="impersonator_name_prompt">Add Name Here</string>
    <string name="twitter_usernames">Twitter Usernames</string>
    <string name="create_impersonator_prompt">Create Impersonator</string>

    <!--Impersonator View Activity-->
    <string name="post_new_tweet">Post</string>

    <!--Login Activity-->
    <string name="username_field">Username or E-mail</string>
    <string name="username_hint">username</string>
    <string name="password_field">Password</string>
    <string name="password_hint">password</string>
    <string name="signIn_button">Sign In</string>

    <!--Standard Header Sizes-->
    <string name="h1">50sp</string>
    <string name="h2">40sp</string>
    <string name="h3">30sp</string>
    <string name="h4">20sp</string>
    <string name="h5">15sp</string>
    <string name="h6">12sp</string>
    <string name="body">12sp</string>

    <!--Standard Margins-->
    <string name="margin_small">10sp</string>
    <string name="margin_medium">20sp</string>
    <string name="margin_large">30sp</string>
    <string name="margin_none">0sp</string>

</resources>
